# opengl_visualization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.hpp  mesh.hpp  model.hpp  openglVisualization.hpp  shader.hpp
shaders/: shader.frag  shader.vert
src/: main.cpp
